fix(maintainability): usar Stream.toList() en lugar de collect(Collectors.toList()) (S6204)