@@ -10,7 +10,6 @@ import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.stream.Collectors;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -49,7 +48,7 @@ public class CustomUserDetailsService implements UserDetailsService {
                                 nombre.startsWith("ROLE_") ? nombre.substring(5) : nombre
                             );
                         })
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
